@@ -37,6 +37,7 @@ kh:
         callback_url_password: "ពាក្យ​សម្ងាត់"
         status_callback_url_user: "អ្នក​ប្រើ"
         status_callback_url_password: "ពាក្យ​សម្ងាត់"
+
     errors:
       models:
         project:
@@ -221,6 +222,14 @@ kh:
       call_successfully_canceled: "បាន​បោះបង់​ការ​ហៅ %{call_address} ដោយ​ជោគជ័យ"
     schedules_controller:
       schedule_succesfully_deleted: "បាន​លុប​​កាលវិភាគ %{schedule_name} ដោយ​ជោគជ័យ"
+    call_logs_controller:
+      csv_is_too_big: "The CSV file is too big."
+    ext:
+      reminder_groups_controller:
+        successfully_updated: "បាន​ធ្វើ​បច្ចុប្បន្នភាព​ក្រុមនៃការរំលឹក %{reminder_group_name} ដោយ​ជោគជ័យ។"
+        no_file_found: "រក​មិន​ឃើញ​ឯកសារ"
+        invalid_extension: "លេខ​ខ្លី​មិន​ត្រឹមត្រូវ"
+        invalid_file: "ឯកសារ​មិន​ត្រឹមត្រូវ៖ %{ex}"
 
   views:
     devise:
@@ -762,6 +771,8 @@ kh:
           save: "រក្សាទុក"
           cancel: "បោះបង់"
           new: "ក្រុមនៃការរំលឹកថ្មី"
+          import_csv: "នាំចូលបញ្ជីលេខទំនាក់ទំនងក្រុមរំលឹក"
+          upload: "ផ្ទុក​ឡើង"
 
       reminder_schedules:
         title: "កាលវិភាគ​ទូរស័ព្ទ​នៃ​កម្មវិធីរំលឹក"
